--- a/AE6.1_GuillermoCésar_GarcíaBrito/index.html
+++ b/AE6.1_GuillermoCésar_GarcíaBrito/index.html
@@ -18,8 +18,8 @@
     </div> -->
 
     <div class="header">
-        <div class="left">
-            <img src="" alt="">
+        <div class="logo_header">
+            <img src="/AE6.1_GuillermoCésar_GarcíaBrito/img/Logo.png" alt="Logo ALLSHOES.">
             <h3>All<span class="naranja">Shoes</span></h3>
         </div>
 
@@ -34,8 +34,13 @@
         </div>
     </div>
 
-    <div class="main-container">
+    <div class="main_container">
+        <div class="main_img">
+            <img src="/AE6.1_GuillermoCésar_GarcíaBrito/img/Carroussel-1.webp" alt="Imagen Carrounsel Zapatillas">
+        </div>
 
+
+        <div></div>
     </div>
 
 </body>
