--- a/AE6.1_GuillermoCésar_GarcíaBrito/index.html
+++ b/AE6.1_GuillermoCésar_GarcíaBrito/index.html
@@ -3,20 +3,10 @@
 <head>
     <meta cahrset="UTF-8">
     <title>AllShoes</title>
-    <link rel="stylesheet" type="text/css" href="estilo.css">
+    <link rel="stylesheet" type="text/css" href="/AE6.1_GuillermoCésar_GarcíaBrito/css/estiloheader.css">
+    <link rel="stylesheet" type="text/css" href="/AE6.1_GuillermoCésar_GarcíaBrito/css/estilomaincontainer.css">
 </head>
 <body>
-    <!-- <div class="header">
-        <ul>
-            <li><a href="#" class="boton-header">CONTACTO</a></li>
-            <li><a href="#" class="boton-header">TIENDA</a></li>
-            <li><a href="#" class="boton-header">CURSOS</a></li>
-            <li><a href="#" class="boton-header">SOBRE NOSOTROS</a></li>
-            <li><a href="#" class="boton-header">INICIO</a></li>
-            <li><img class="logo-header" src="/proyecto segundo trimestre/img/Logo.png" alt="Logo de la Página Web"/>ALL<span class="naranja">SHOES</span></li>
-        </ul>
-    </div> -->
-
     <div class="header">
         <div class="logo_header">
             <img src="/AE6.1_GuillermoCésar_GarcíaBrito/img/Logo.png" alt="Logo ALLSHOES.">
@@ -40,7 +30,17 @@
         </div>
 
 
-        <div></div>
+        <div class="main_text">
+            <div class="text">
+                <p>Lorem ipsu</p>
+            </div>
+
+            <div class="images">
+                <img src="/AE6.1_GuillermoCésar_GarcíaBrito/img/Articulo-1.webp">
+                <img src="/AE6.1_GuillermoCésar_GarcíaBrito/img/Articulo-2.webp">
+                <img src="/AE6.1_GuillermoCésar_GarcíaBrito/img/Articulo-3.webp">
+            </div>
+        </div>
     </div>
 
 </body>
