--- a/AE6.1_GuillermoCésar_GarcíaBrito/index.html
+++ b/AE6.1_GuillermoCésar_GarcíaBrito/index.html
@@ -32,7 +32,7 @@
 
         <div class="main_text">
             <div class="text">
-                <p>Lorem ipsu</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec enim nisl, vehicula in sagittis vel, iaculis sed mi. Donec ac nunc cursus, commodo eros nec, scelerisque urna. Etiam eu neque.</p>
             </div>
 
             <div class="images">
@@ -40,6 +40,8 @@
                 <img src="/AE6.1_GuillermoCésar_GarcíaBrito/img/Articulo-2.webp">
                 <img src="/AE6.1_GuillermoCésar_GarcíaBrito/img/Articulo-3.webp">
             </div>
+
+            
         </div>
     </div>
 
