--- a/AE6.1_GuillermoCésar_GarcíaBrito/index.html
+++ b/AE6.1_GuillermoCésar_GarcíaBrito/index.html
@@ -15,11 +15,11 @@
 
         <div class="menu_principal">
             <ul class="menu">
-                <li class="menu-item"><a href="">Inicio</a></li>
-                <li class="menu-item"><a href="">Sobre Nosotros</a></li>
-                <li class="menu-item"><a href="">Cursos</a></li>
-                <li class="menu-item"><a href="">Tienda</a></li>
-                <li class="menu-item"><a href="">Contacto</a></li>
+                <li class="menu-item"><a href="/AE6.1_GuillermoCésar_GarcíaBrito/index.html">Inicio</a></li>
+                <li class="menu-item"><a href="/AE6.1_GuillermoCésar_GarcíaBrito/sobrenosotros.html">Sobre Nosotros</a></li>
+                <li class="menu-item"><a href="/AE6.1_GuillermoCésar_GarcíaBrito/cursos.html">Cursos</a></li>
+                <li class="menu-item"><a href="/AE6.1_GuillermoCésar_GarcíaBrito/tienda.html">Tienda</a></li>
+                <li class="menu-item"><a href="/AE6.1_GuillermoCésar_GarcíaBrito/contacto.html">Contacto</a></li>
             </ul>
         </div>
     </div>
