--- a/AE6.1_GuillermoCésar_GarcíaBrito/html/tienda.html
+++ b/AE6.1_GuillermoCésar_GarcíaBrito/html/tienda.html
@@ -16,10 +16,10 @@
         <div class="menu_principal">
             <ul class="menu">
                 <li class="menu-item"><a href="/AE6.1_GuillermoCésar_GarcíaBrito/index.html">Inicio</a></li>
-                <li class="menu-item"><a href="/AE6.1_GuillermoCésar_GarcíaBrito/sobrenosotros.html">Sobre Nosotros</a></li>
-                <li class="menu-item"><a href="/AE6.1_GuillermoCésar_GarcíaBrito/cursos.html">Cursos</a></li>
-                <li class="menu-item"><a href="/AE6.1_GuillermoCésar_GarcíaBrito/tienda.html">Tienda</a></li>
-                <li class="menu-item"><a href="/AE6.1_GuillermoCésar_GarcíaBrito/contacto.html">Contacto</a></li>
+                <li class="menu-item"><a href="/AE6.1_GuillermoCésar_GarcíaBrito/html/sobrenosotros.html">Sobre Nosotros</a></li>
+                <li class="menu-item"><a href="/AE6.1_GuillermoCésar_GarcíaBrito/html/cursos.html">Cursos</a></li>
+                <li class="menu-item"><a href="/AE6.1_GuillermoCésar_GarcíaBrito/html/tienda.html">Tienda</a></li>
+                <li class="menu-item"><a href="/AE6.1_GuillermoCésar_GarcíaBrito/html/contacto.html">Contacto</a></li>
             </ul>
         </div>
     </div>
