--- a/AE6.1_GuillermoCésar_GarcíaBrito/index.html
+++ b/AE6.1_GuillermoCésar_GarcíaBrito/index.html
@@ -27,6 +27,7 @@
     <div class="main_container">
         <div class="main_img">
             <img src="/AE6.1_GuillermoCésar_GarcíaBrito/img/Carroussel-1.webp" alt="Imagen Carrounsel Zapatillas">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec enim nisl.</p>
         </div>
 
 
