--- a/AE6.1_GuillermoCésar_GarcíaBrito/html/sobrenosotros.html
+++ b/AE6.1_GuillermoCésar_GarcíaBrito/html/sobrenosotros.html
@@ -3,32 +3,34 @@
 <head>
     <meta cahrset="UTF-8">
     <title>AllShoes</title>
-    <link rel="stylesheet" type="text/css" href="/AE6.1_GuillermoCésar_GarcíaBrito/css/estiloheader.css">
-    <link rel="stylesheet" type="text/css" href="/AE6.1_GuillermoCésar_GarcíaBrito/css/estilosobrenosotros.css">
+    <link rel="stylesheet" type="text/css" href="../css/estiloheader.css">
+    <link rel="stylesheet" type="text/css" href="../css/estilosobrenosotros.css">
 </head>
 <body>
     <div class="header">
         <div class="logo_header">
-            <img src="/AE6.1_GuillermoCésar_GarcíaBrito/img/Logo.png" alt="Logo ALLSHOES.">
+            <img src="../img/Logo.png" alt="Logo ALLSHOES.">
             <h3>All<span class="naranja">Shoes</span></h3>
         </div>
 
         <div class="menu_principal">
             <ul class="menu">
-                <li class="menu-item"><a href="/AE6.1_GuillermoCésar_GarcíaBrito/index.html">Inicio</a></li>
-                <li class="menu-item"><a href="/AE6.1_GuillermoCésar_GarcíaBrito/html/sobrenosotros.html">Sobre Nosotros</a></li>
-                <li class="menu-item"><a href="/AE6.1_GuillermoCésar_GarcíaBrito/html/cursos.html">Cursos</a></li>
-                <li class="menu-item"><a href="/AE6.1_GuillermoCésar_GarcíaBrito/html/tienda.html">Tienda</a></li>
-                <li class="menu-item"><a href="/AE6.1_GuillermoCésar_GarcíaBrito/html/contacto.html">Contacto</a></li>
+                <li class="menu-item"><a href="../index.html">Inicio</a></li>
+                <li class="menu-item"><a href="sobrenosotros.html">Sobre Nosotros</a></li>
+                <li class="menu-item"><a href="cursos.html">Cursos</a></li>
+                <li class="menu-item"><a href="tienda.html">Tienda</a></li>
+                <li class="menu-item"><a href="contacto.html">Contacto</a></li>
             </ul>
         </div>
     </div>
 
-    <div class="sub_header">
-        <h2>sobre nosotros</h2>
-    </div>
 
     <div class="main_container">
+        
+        <div class="sub_header">
+            <h2>sobre nosotros</h2>
+        </div>
+
         <div class="main_info">
             <div class="main_picture">
                 <img src="/AE6.1_GuillermoCésar_GarcíaBrito/img/Tienda-1.jgp.webp" alt="Fotografia de nuestra tienda física.">
