--- a/AE6.1_GuillermoCésar_GarcíaBrito/index.html
+++ b/AE6.1_GuillermoCésar_GarcíaBrito/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta cahrset="UTF-8">
     <title>AllShoes</title>
-    <link rel="stylesheet" type="text/css" href="/AE6.1_GuillermoCésar_GarcíaBrito/css/estiloheader.css">
-    <link rel="stylesheet" type="text/css" href="/AE6.1_GuillermoCésar_GarcíaBrito/css/estilomaincontainer.css">
+    <link rel="stylesheet" type="text/css" href="css/estiloheader.css">
+    <link rel="stylesheet" type="text/css" href="css/estilomaincontainer.css">
 </head>
 <body>
     <div class="header">
@@ -15,11 +15,11 @@
 
         <div class="menu_principal">
             <ul class="menu">
-                <li class="menu-item"><a href="/AE6.1_GuillermoCésar_GarcíaBrito/index.html">Inicio</a></li>
-                <li class="menu-item"><a href="/AE6.1_GuillermoCésar_GarcíaBrito/html/sobrenosotros.html">Sobre Nosotros</a></li>
-                <li class="menu-item"><a href="/AE6.1_GuillermoCésar_GarcíaBrito/html/cursos.html">Cursos</a></li>
-                <li class="menu-item"><a href="/AE6.1_GuillermoCésar_GarcíaBrito/html/tienda.html">Tienda</a></li>
-                <li class="menu-item"><a href="/AE6.1_GuillermoCésar_GarcíaBrito/html/contacto.html">Contacto</a></li>
+                <li class="menu-item"><a href="#">Inicio</a></li>
+                <li class="menu-item"><a href="html/sobrenosotros.html">Sobre Nosotros</a></li>
+                <li class="menu-item"><a href="html/cursos.html">Cursos</a></li>
+                <li class="menu-item"><a href="html/tienda.html">Tienda</a></li>
+                <li class="menu-item"><a href="html/contacto.html">Contacto</a></li>
             </ul>
         </div>
     </div>
@@ -27,7 +27,7 @@
     <div class="main_container">
         <div class="main_img">
             <img src="/AE6.1_GuillermoCésar_GarcíaBrito/img/Carroussel-1.webp" alt="Imagen Carrounsel Zapatillas">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec enim nisl.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec enim nisl. </p>
         </div>
 
 
