--- a/AE6.1_GuillermoCésar_GarcíaBrito/index.html
+++ b/AE6.1_GuillermoCésar_GarcíaBrito/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header">
         <div class="logo_header">
-            <img src="/AE6.1_GuillermoCésar_GarcíaBrito/img/Logo.png" alt="Logo ALLSHOES.">
+            <img src="img/Logo.png" alt="Logo ALLSHOES.">
             <h3>All<span class="naranja">Shoes</span></h3>
         </div>
 
@@ -26,7 +26,7 @@
 
     <div class="main_container">
         <div class="main_img">
-            <img src="/AE6.1_GuillermoCésar_GarcíaBrito/img/Carroussel-1.webp" alt="Imagen Carrounsel Zapatillas">
+            <img src="img/Carroussel-1.webp" alt="Imagen Carrounsel Zapatillas">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec enim nisl. </p>
         </div>
 
@@ -37,9 +37,9 @@
             </div>
 
             <div class="images">
-                <img src="/AE6.1_GuillermoCésar_GarcíaBrito/img/Articulo-1.webp">
-                <img src="/AE6.1_GuillermoCésar_GarcíaBrito/img/Articulo-2.webp">
-                <img src="/AE6.1_GuillermoCésar_GarcíaBrito/img/Articulo-3.webp">
+                <img src="img/Articulo-1.webp">
+                <img src="img/Articulo-2.webp">
+                <img src="img/Articulo-3.webp">
             </div>
 
             
