--- a/AE6.1_GuillermoCésar_GarcíaBrito/index.html
+++ b/AE6.1_GuillermoCésar_GarcíaBrito/index.html
@@ -27,13 +27,14 @@
     <div class="main_container">
         <div class="main_img">
             <img src="img/Carroussel-1.webp" alt="Imagen Carrounsel Zapatillas">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec enim nisl. </p>
+            <p>Lorem ipsum dolor</p>
         </div>
 
 
         <div class="main_text">
             <div class="text">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec enim nisl, vehicula in sagittis vel, iaculis sed mi. Donec ac nunc cursus, commodo eros nec, scelerisque urna. Etiam eu neque.</p>
+                <p class="text_boton"><a href="html/tienda.html">comprar ahora</a></p>
             </div>
 
             <div class="images">
