--- a/AE6.1_GuillermoCésar_GarcíaBrito/html/cursos.html
+++ b/AE6.1_GuillermoCésar_GarcíaBrito/html/cursos.html
@@ -4,7 +4,7 @@
     <meta cahrset="UTF-8">
     <title>AllShoes</title>
     <link rel="stylesheet" type="text/css" href="../css/estiloheader.css">
-    <link rel="stylesheet" type="text/css" href="../css/estilosobrenosotros.css">
+    <link rel="stylesheet" type="text/css" href="../css/estilocursos.css">
 </head>
 <body>
     <div class="header">
@@ -26,6 +26,23 @@
 
     <div class="main_container">
         
+        <div class="sub_header">
+            <h1>cursos</h1>
+        </div>
+
+        <div class="curso_falsificacion">
+            <img src="../img/Curso-2.webp" alt="Imagen del curso de falsificaciones.">
+            <h2>falsificaciones</h2>
+            <p class="small">4 horas</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquet, nisi vitae hendrerit mollis, augue lacus placerat tortor, non porta erat nisl nec odio. Suspendisse potenti. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ornare.</p>
+        </div>
+        <div class="curso_diseño">
+            <img src="../img/Curso-1.webp" alt="Imagen del curso de diseño.">
+            <h2>diseño</h2>
+            <p class="small">4 horas</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquet, nisi vitae hendrerit mollis, augue lacus placerat tortor, non porta erat nisl nec odio. Suspendisse potenti. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ornare.</p>
+        </div>
+
     </div>
 
 </body>
