--- a/AE6.1_GuillermoCésar_GarcíaBrito/html/tienda.html
+++ b/AE6.1_GuillermoCésar_GarcíaBrito/html/tienda.html
@@ -4,7 +4,7 @@
     <meta cahrset="UTF-8">
     <title>AllShoes</title>
     <link rel="stylesheet" type="text/css" href="../css/estiloheader.css">
-    <link rel="stylesheet" type="text/css" href="../css/estilomaincontainer.css">
+    <link rel="stylesheet" type="text/css" href="../css/estilotienda.css">
 </head>
 <body>
     <div class="header">
@@ -26,7 +26,66 @@
 
     <div class="main_container">
         
+        <div class="sub_header">
+            <h3>tienda</h3>
+        </div>
+<!--
+        <div class="item">
+            <img src="../img/Articulo-1.webp" alt="">
+            <h3>zapato 1</h3>
+            <p><a href="">agregar al carrito</a></p>
+        </div>
+        <div class="item">
+            <img src="../img/Articulo-2.webp" alt="">
+            <h3>zapato 2</h3>
+            <p><a href="">agregar al carrito</a></p>
+        </div>
+        <div class="item">
+            <img src="../img/Articulo-3.webp" alt="">
+            <h3>zapato 3</h3>
+            <p><a href="">agregar al carrito</a></p>
+        </div>
+        <div class="item">
+            <img src="../img/Articulo-4.webp" alt="">
+            <h3>zapato 4</h3>
+            <p><a href="">agregar al carrito</a></p>
+        </div>
     </div>
-    
+-->
+        <div class="menu_tienda">
+
+            <ul class="tienda">
+                <li class="tienda_item">
+                    <img src="../img/Articulo-1.webp" alt="">
+                    <h3>zapato 1</h3>
+                    <h5>120,00€</h5>
+                    <p><a href="">agregar al carrito</a></p>
+                </li>
+                <li class="tienda_item">
+                    <img src="../img/Articulo-2.webp" alt="">
+                    <h3>zapato 2</h3>
+                    <h5>320,00€</h5>
+                    <p><a href="">agregar al carrito</a></p>
+                </li>
+                <li class="tienda_item">
+                    <img src="../img/Articulo-3.webp" alt="">
+                    <h3>zapato 3</h3>
+                    <h5>220,00€</h5>
+                    <p><a href="">agregar al carrito</a></p>
+                </li>
+                <li class="tienda_item">
+                    <img src="../img/Articulo-4.webp" alt="">
+                    <h3>zapato 4</h3>
+                    <h5>90,00€</h5>
+                    <p><a href="">agregar al carrito</a></p>
+                </li>
+            </ul>
+
+            <ul class="tienda_paginas">
+                <li class="boton_pagina"><a href="#">1</a></li>
+                <li class="boton_pagina"><a href="#">2</a></li>
+                <li class="boton_pagina"><a href="#">3</a></li>
+            </ul>
+        </div> 
 </body>
 </html>
