--- a/AE6.1_GuillermoCésar_GarcíaBrito/html/contacto.html
+++ b/AE6.1_GuillermoCésar_GarcíaBrito/html/contacto.html
@@ -25,7 +25,29 @@
     </div>
 
     <div class="main_container">
-        
+
+        <div class="sub_header">
+            <h1>contacto</h1>
+        </div>
+
+        <div class="info">
+            <h2>¿tienes alguna duda?</h2>
+            <h6>Lorem ipsum dolor sit amet, consectetur adipiscing.</h6>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla non sodales risus. Proin rhoncus, mi ac accumsan vestibulum, nisl dolor mollis massa, quis ornare risus urna eu nulla. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras a cursus erat, eu sagittis orci. Sed ultricies neque nunc, et laoreet arcu ullamcorper vitae. Mauris sagittis, est.</p>
+            <h4>E-mail:</h4>
+            <p>info@allshoes.es</p>
+            <h4>Redes Sociales:</h4>
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+
+        <div class="input">
+            
+        </div>
+
     </div>
 
 </body>
