--- a/AE6.1_GuillermoCésar_GarcíaBrito/html/cursos.html
+++ b/AE6.1_GuillermoCésar_GarcíaBrito/html/cursos.html
@@ -34,13 +34,15 @@
             <img src="../img/Curso-2.webp" alt="Imagen del curso de falsificaciones.">
             <h2>falsificaciones</h2>
             <p class="small">4 horas</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquet, nisi vitae hendrerit mollis, augue lacus placerat tortor, non porta erat nisl nec odio. Suspendisse potenti. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ornare.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent rhoncus id urna eu eleifend. Maecenas suscipit finibus ante, et viverra justo vestibulum sed. Sed varius ac est eu varius. Nam aliquet mauris sit amet neque consequat, vitae ultrices nulla faucibus. Praesent dignissim ante nec dapibus euismod. Nam fermentum nibh et enim ultricies tempor. Donec tempus, metus eu sollicitudin aliquam, justo velit elementum lectus, non commodo ipsum massa et dolor. Curabitur.</p>
+            <a href="#">leer más</a>
         </div>
         <div class="curso_diseño">
             <img src="../img/Curso-1.webp" alt="Imagen del curso de diseño.">
             <h2>diseño</h2>
             <p class="small">4 horas</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam aliquet, nisi vitae hendrerit mollis, augue lacus placerat tortor, non porta erat nisl nec odio. Suspendisse potenti. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ornare.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent rhoncus id urna eu eleifend. Maecenas suscipit finibus ante, et viverra justo vestibulum sed. Sed varius ac est eu varius. Nam aliquet mauris sit amet neque consequat, vitae ultrices nulla faucibus. Praesent dignissim ante nec dapibus euismod. Nam fermentum nibh et enim ultricies tempor. Donec tempus, metus eu sollicitudin aliquam, justo velit elementum lectus, non commodo ipsum massa et dolor. Curabitur.</p>
+            <a href="#">leer más</a>
         </div>
 
     </div>
