--- a/AE6.1_GuillermoCésar_GarcíaBrito/index.html
+++ b/AE6.1_GuillermoCésar_GarcíaBrito/index.html
@@ -33,7 +33,7 @@
 
         <div class="main_text">
             <div class="text">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec enim nisl, vehicula in sagittis vel, iaculis sed mi. Donec ac nunc cursus, commodo eros nec, scelerisque urna. Etiam eu neque.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eget massa eget justo dictum faucibus. Duis convallis risus id magna sodales mollis eu quis velit. Nam tincidunt tellus id arcu lobortis commodo. Aenean pulvinar neque vitae ullamcorper eleifend. Phasellus a congue dui. Ut eget nunc at dolor egestas vulputate. Phasellus porta lorem euismod libero euismod convallis. Donec quam lacus, convallis quis molestie at, molestie quis libero. Fusce sed pretium tellus.</p>
                 <p class="text_boton"><a href="html/tienda.html">comprar ahora</a></p>
             </div>
 
