--- a/AE6.1_GuillermoCésar_GarcíaBrito/index.html
+++ b/AE6.1_GuillermoCésar_GarcíaBrito/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/estiloheader.css">
     <link rel="stylesheet" type="text/css" href="css/estilomaincontainer.css">
 </head>
+<!-- Guillermo César García Brito -->
 <body>
     <div class="header">
         <div class="logo_header">
