--- a/Todo/UD7 - Javascript/E-2.2/index.html
+++ b/Todo/UD7 - Javascript/E-2.2/index.html
@@ -3,12 +3,10 @@
 <head>
     <meta cahrset="UTF-8">
     <title>Guillermo César García Brito</title>
-    <link rel="stylesheet" type="text/css" href="alertas.js">
+    <script src="alertas.js"></script>
 </head>
 <!-- Guillermo César García Brito -->
 <body>
-    <script>
 
-    </script>
 </body>
 </html>
