Llamar a los ficheros java: script.js

--- a/Todo/UD7 - Javascript/E-12.3.12 Guillermo César/index.html
+++ b/Todo/UD7 - Javascript/E-12.3.12 Guillermo César/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Guillermo César García Brito</title>
-    <script src="java.js"></script>
+    <script src="script.js"></script>
 </head>
 <!-- Guillermo César García Brito -->
 <body>
