--- a/Proyecto AVASCRIPT/Ejercicio 2/index.html
+++ b/Proyecto AVASCRIPT/Ejercicio 2/index.html
@@ -2,13 +2,13 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Ejercicio 1</title>
-    <script src="java/script.js"></script>
+    <title>Ejercicio 2</title>
+    <script src="javascript/script.js"></script>
 </head>
 <!-- Guillermo César García Brito -->
 <body>
 
-    
+    <h1>EJERCICIO 2</h1>
     
 </body>
 
